public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1731/source/compile
source.c: In function ‘main’:
source.c:4:13: error: expected identifier or ‘(’ before ‘;’ token
     int n,i,;
             ^
